# cuixkANN

./: .gitignore  CMakeLists.faiss.txt  CMakeLists.txt  LICENSE  README.md  build.sh
conf/: dataset_path.json
src/: dataset.h  main.cpp  utils.cpp  utils.h
src/index/: index.h  index_brute.h  index_ivf.h
src/myLib/: CMakeLists.txt  myLib.cpp
src/test/: test.cpp
